@@ -4,6 +4,10 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
 and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).
 
+## [Unreleasd]
+### Changed
+- Updated controllers to remove deprecated use of modAction
+
 ## [1.5.1-pl2] - 2018-07-26
 ### Fixed
 - Fixed icon in task scheduler status display
